Name:                mdp
Version:             0.1
Synopsis:            MDP Model builder and Value Iteration solver for GridWorld
Homepage:            https://github.com/chetant/mdp
License:             BSD3
License-file:        LICENSE
Author:              Chetan T
Maintainer:          chetant@gmail.com
Category:            AI
Build-type:          Simple
Cabal-version:       >=1.2
Library
  Exposed-modules:     AI.MDP
                     , AI.MDP.GridWorld
  
  Build-depends:       base
                     , vector
